examOperations.sass
html
    body
        main
            display: flex
            flex-direction: column
            justify-content: space-between
            width: 100%
            height: 100%
            .exam-info-header
                width: 100%
                height: 60px
                display: flex
                justify-content: space-evenly
                align-items: center
                margin-top: 10px
                font-family: hoss-round-xnarrow, sans-serif
                font-weight: 600
                font-size: 1.1em
                .question-counter-container
                    height: 90%
                    width: 30%
                    border-radius: 10px
                    background-color: #d4c299
                    display: flex
                    justify-content: center
                    align-items: center
                    gap: 5px
                .timer
                    display: flex
                    justify-content: center
                    align-items: center
                    height: 100%
                    width: 100px
                    background-color: #d4c299
                    border-radius: 10px
                    font-size: 1.4em
                    transition: color 3s ease
                    color: rgb(23, 130, 25)
                .question-text-resize-input-container
                    height: 100%
                    width: 30%
                    display: flex
                    justify-content: center
                    align-items: center
                    background-color: #d4c299
                    border-radius: 10px
                    .question-text-resize-input
                        height: 100%
                        width: 80%
            .question-container
                position: relative
                margin-inline: auto
                display: flex
                align-items: flex-start
                flex-direction: column
                height: 25%
                margin-top: 20px
                font-size: 1.6em
                width: 90%
                direction: rtl
                overflow-y: auto
                .question-head
                    margin-bottom: 20px
                .question-answers-container
                    width: 100%
                    display: flex
                    .question-answer
                        width: 100%
                        margin-top: 5px
                        text-align: right
                .question-imgs-container
                    position: absolute
                    width: 100%
                    height: inherit
                    display: flex
                    justify-content: center
                    .hide
                        display: none
                    .check-pick, .cross-pick
                        width: 30%
                        height: max-content
                .hide-animation
                    animation: hidden 0.6s

                @keyframes hidden 
                    0%
                        opacity: 1    
                    
                    100%
                        opacity: 0    
                    
                
            .bottom-container
                height: 40%
                width: 100%
                display: flex
                align-items: center
                gap: 10px
                .bottom-left-container
                    width: 100%
                    height: 100%
                    display: flex
                    flex-direction: column
                    justify-content: center
                    align-items: center
                    gap: 10px
                    input
                        width: 90%
                    .question-paragraph-container
                        background-color: #f1f1f1
                        height: 95%
                        width: 100%
                        border-radius: 10px
                        display: flex
                        justify-content: center
                        align-items: center
                        margin-left: 10px
                        overflow-y: auto
                        .question-paragraph
                            width: 90%
                            height: 90%
                            direction: rtl
                            .question-paragraph-img-container
                                width: 100%
                                height: 100%
                                display: flex
                                justify-content: center
                                align-items: center
                                img
                                    width: 60%                        
                                .hide
                                    display: none !important                            
                .choices-container
                    display: flex
                    justify-content: space-around
                    align-items: center
                    flex-direction: column
                    width: 30%
                    height: 100%
                    user-select: none
                    .choice
                        display: flex
                        justify-content: center
                        align-items: center
                        height: 20%
                        width: 80%
                        border: #5eee2550 2px solid
                        border-radius: 5px
                        background-color: #fff
                        color: #000
                        transition: color 0.3s ease, background-color 0.3s ease
                        font-size: 1.2em
                        font-weight: 600
                        cursor: pointer
                        @media (hover : hover)
                            &:hover
                                background-color: #5eee25
                                color: #fff
                
            .general-test-controls
                display: flex
                justify-content: space-evenly
                align-items: center
                width: 100%
                height: 60px
                .test-end-button-container
                    display: flex
                    justify-content: center
                    align-items: center
                    width: 100%
                    height: 80%
                    .test-end-button
                        display: flex
                        justify-content: center
                        align-items: center
                        width: 95%
                        height: 100%
                        border-radius: 5px
                        background-color: #dc3545
                        color: #fff
                        cursor: pointer
                        user-select: none
                .test-skip-question-container
                    display: flex
                    justify-content: center
                    align-items: center
                    width: 30%
                    height: 80%
                    .skip-question-button
                        display: flex
                        justify-content: center
                        align-items: center
                        width: 70%
                        height: 100%
                        color: #0d6efd
                        border: 1px solid #0d6efd
                        border-radius: 5px
                        cursor: pointer
                        user-select: none
                        background-color: #fff
                        transition: background-color 0.2s ease, color 0.2s ease
                        @media (hover : hover )
                            &:hover
                                color: #fff
                                background-color: #0d6efd

